# cpp_labs

lab2/: CMakeLists.txt  README.md
lab2/src/: lib.cpp  lib.hpp  main.cpp  menu.hpp
lab2/tests/: CMakeLists.txt  test.cpp
